salvar backup quando a janela perder o foco